[gd_scene load_steps=22 format=2]

[ext_resource path="res://modular/CloseBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/map2.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Regular_5.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Condensed_Regular_2B.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Condensed_Regular_2.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/icons/checkbox_unchecked.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/icons/checkbox_checked.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Condensed_Regular_4.tres" type="DynamicFont" id=8]
[ext_resource path="res://exercises/tutorial/tutorial_3.gd" type="Script" id=10]
[ext_resource path="res://assets/ui/logos/optalert-logo.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=13]
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color( 0, 0, 0, 0.25098 )
shadow_size = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.54902, 0.54902, 0.552941, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ImageTexture" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.952941, 0.94902, 0.952941, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.823529, 0.823529, 0.823529, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.929412, 0.929412, 0.929412, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.823529, 0.823529, 0.823529, 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.980392, 0.980392, 0.980392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.823529, 0.823529, 0.823529, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.364706, 0.364706, 0.364706, 1 )

[node name="Tutorial3" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 13 )
script = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 598.0

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 598.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CloseBar" parent="MarginContainer/Control/VBoxContainer" instance=ExtResource( 1 )]

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer"]
margin_top = 36.0
margin_right = 1020.0
margin_bottom = 371.0
rect_min_size = Vector2( 0, 335 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1015.0
margin_bottom = 330.0
rect_min_size = Vector2( 0, 300 )
custom_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 555.0
margin_bottom = 325.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
margin_right = 555.0
margin_bottom = 80.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="RichTextLabel" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_top = 20.0
margin_right = 555.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.411765, 0.780392, 0.756863, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Registro de Riesgos"
align = 1
valign = 2

[node name="Panel" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 555.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 545.0
margin_bottom = 236.0
custom_constants/separation = 0

[node name="UserInformation" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 535.0
margin_bottom = 80.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.55

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserInformation"]
margin_right = 535.0
margin_bottom = 24.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserInformation/HBoxContainer"]
margin_right = 178.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Operador"
valign = 1

[node name="UserName" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserInformation/HBoxContainer"]
unique_name_in_owner = true
margin_left = 178.0
margin_right = 535.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Gabriel Fernandez"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserInformation"]
margin_top = 28.0
margin_right = 535.0
margin_bottom = 52.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserInformation/HBoxContainer2"]
margin_right = 178.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Vehiculo actual"
valign = 1

[node name="Vehicle" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserInformation/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 178.0
margin_right = 535.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "CEX23"
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserInformation"]
margin_top = 56.0
margin_right = 535.0
margin_bottom = 80.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserInformation/HBoxContainer3"]
margin_right = 178.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Sitio actual"
valign = 1

[node name="Place" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserInformation/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 178.0
margin_right = 535.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "San sebastian"
valign = 1

[node name="UserContact" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 535.0
margin_bottom = 226.0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact"]
margin_right = 535.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.02
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 530.0
margin_bottom = 115.0
custom_constants/separation = -5

[node name="Option1" type="CheckBox" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.596078, 0.823529, 0.803922, 1 )
margin_right = 525.0
margin_bottom = 32.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_icons/radio_checked_disabled = SubResource( 4 )
custom_icons/radio_checked = SubResource( 4 )
custom_icons/checked_disabled = SubResource( 4 )
custom_icons/radio_unchecked_disabled = SubResource( 4 )
custom_icons/checked = ExtResource( 7 )
custom_icons/radio_unchecked = SubResource( 4 )
custom_icons/unchecked_disabled = SubResource( 4 )
custom_icons/unchecked = ExtResource( 6 )
custom_styles/focus = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/Option1"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/Option1/HBoxContainer"]
margin_right = 40.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
mouse_filter = 1

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/Option1/HBoxContainer"]
margin_left = 44.0
margin_right = 525.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Operador contactado"
valign = 1

[node name="Option2" type="CheckBox" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.596078, 0.823529, 0.803922, 1 )
margin_top = 27.0
margin_right = 525.0
margin_bottom = 59.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_icons/radio_checked_disabled = SubResource( 4 )
custom_icons/radio_checked = SubResource( 4 )
custom_icons/checked_disabled = SubResource( 4 )
custom_icons/radio_unchecked_disabled = SubResource( 4 )
custom_icons/checked = ExtResource( 7 )
custom_icons/radio_unchecked = SubResource( 4 )
custom_icons/unchecked_disabled = SubResource( 4 )
custom_icons/unchecked = ExtResource( 6 )
custom_styles/focus = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/Option2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/Option2/HBoxContainer"]
margin_right = 40.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
mouse_filter = 1

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/Option2/HBoxContainer"]
margin_left = 44.0
margin_right = 525.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Aconsejado a descansar"
valign = 1

[node name="Option3" type="CheckBox" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.596078, 0.823529, 0.803922, 1 )
margin_top = 54.0
margin_right = 525.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_icons/radio_checked_disabled = SubResource( 4 )
custom_icons/radio_checked = SubResource( 4 )
custom_icons/checked_disabled = SubResource( 4 )
custom_icons/radio_unchecked_disabled = SubResource( 4 )
custom_icons/checked = ExtResource( 7 )
custom_icons/radio_unchecked = SubResource( 4 )
custom_icons/unchecked_disabled = SubResource( 4 )
custom_icons/unchecked = ExtResource( 6 )
custom_styles/focus = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/Option3"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/Option3/HBoxContainer"]
margin_right = 40.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
mouse_filter = 1

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/Option3/HBoxContainer"]
margin_left = 44.0
margin_right = 525.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Cuestionario completo"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 525.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 137.0
margin_bottom = 29.0
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Comentarios Adicionales"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 141.0
margin_right = 525.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 3
custom_constants/margin_left = 2
custom_constants/margin_bottom = 3

[node name="DescriptionTextBox" type="LineEdit" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 3.0
margin_right = 382.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact"]
margin_top = 124.0
margin_right = 535.0
margin_bottom = 146.0
alignment = 2

[node name="AddRecordButton" type="Button" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 435.0
margin_right = 535.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 22 )
focus_mode = 0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "Añadir Registro"

[node name="MapContainer" type="Control" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 560.0
margin_right = 1010.0
margin_bottom = 325.0
rect_min_size = Vector2( 450, 0 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/MapContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer"]
margin_top = 375.0
margin_right = 1020.0
margin_bottom = 596.0
rect_min_size = Vector2( 0, 170 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="Panel" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_right = 1015.0
margin_bottom = 221.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1005.0
margin_bottom = 216.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel/MarginContainer/VBoxContainer2"]
margin_right = 1000.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 3

[node name="Panel" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_right = 180.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 0 )
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel"]
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 107.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
text = "Tiempo Local"
valign = 1

[node name="Panel2" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 183.0
margin_right = 383.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel2"]
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 145.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 8 )
text = "Anotador/Vehiculo"
valign = 1

[node name="Panel3" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 386.0
margin_right = 1000.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel3"]
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 94.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 8 )
text = "Descripción"
valign = 1

[node name="RiskRowContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 1000.0
margin_bottom = 211.0
size_flags_vertical = 3

[connection signal="close" from="MarginContainer/Control/VBoxContainer/CloseBar" to="." method="_on_CloseBar_close"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/UserContact/HBoxContainer4/AddRecordButton" to="." method="_on_AddRecordButton_pressed"]
